--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,6 +63,12 @@ dependencies:
   # HTTP & API
   dio: ^5.3.2
   shared_preferences: ^2.2.0
+  http: ^1.1.0
+
+  # OAuth & Auth
+  url_launcher: ^6.1.11
+  crypto: ^3.0.3  # Untuk PKCE
+  flutter_appauth: ^9.0.0
 
 dev_dependencies:
   flutter_test:
