--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,9 +41,10 @@ dependencies:
   firebase_messaging: ^14.6.5
   flutter_local_notifications: ^19.1.0
 
+  google_sign_in: ^6.1.6
+  sign_in_with_apple: ^7.0.1
 
   # State Management
-  flutter_riverpod: ^2.3.6
   riverpod_annotation: ^2.1.1
   # Routing
   go_router: ^10.0.0
@@ -69,6 +70,8 @@ dependencies:
   url_launcher: ^6.1.11
   crypto: ^3.0.3  # Untuk PKCE
   flutter_appauth: ^9.0.0
+
+  flutter_dotenv: ^5.1.0
 
 dev_dependencies:
   flutter_test:
@@ -100,6 +103,10 @@ flutter:
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
+  assets:
+      - .env
+      - assets/img/logo_google.svg
+      - assets/img/logo_apple.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
