--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -72,6 +72,11 @@ dependencies:
   flutter_appauth: ^9.0.0
 
   flutter_dotenv: ^5.1.0
+  connectivity_plus: ^6.1.4
+
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
+  path_provider: ^2.0.15
 
 dev_dependencies:
   flutter_test:
