--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,8 @@ dependencies:
   sign_in_with_apple: ^7.0.1
 
   # State Management
+  flutter_hooks: ^0.18.0
+  hooks_riverpod: ^2.3.6
   riverpod_annotation: ^2.1.1
   # Routing
   go_router: ^10.0.0
@@ -57,8 +59,6 @@ dependencies:
   logger: ^1.4.0
 
   # UI
-  flutter_hooks: ^0.18.0
-  hooks_riverpod: ^2.3.6
   google_fonts: ^5.1.0
 
   # HTTP & API
@@ -77,6 +77,8 @@ dependencies:
   hive: ^2.2.3
   hive_flutter: ^1.1.0
   path_provider: ^2.0.15
+  carousel_slider: ^5.0.0
+  cached_network_image: ^3.4.1
 
 dev_dependencies:
   flutter_test:
@@ -110,8 +112,9 @@ flutter:
   #   - images/a_dot_ham.jpeg
   assets:
       - .env
-      - assets/img/logo_google.svg
-      - assets/img/logo_apple.png
+      - assets/img/google_logo.png
+      - assets/img/apple_logo.png
+      - assets/img/loading.gif
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
